# ESP32_IDF_OTA_demo

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  common.h  main_app.c  ota_hal.c  ota_hal.h  wifi.c  wifi.h
